--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install --legacy-peer-deps",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "path-browserify": "^1.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
     "react-canvas-draw": "^1.2.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
